tests/baselines/reference/checkJsxChildrenCanBeTupleType.errors.txt
tests/cases/conformance/jsx/checkJsxChildrenCanBeTupleType.tsx(17,18): error TS2322: Type '{ children: [Element, Element, Element]; }' is not assignable to type 'Readonly<ResizablePanelProps>'.
  Types of property 'children' are incompatible.
    Type '[Element, Element, Element]' is not assignable to type '[ReactNode, ReactNode]'.
      Types of property 'length' are incompatible.
        Type '3' is not assignable to type '2'.


==== tests/cases/conformance/jsx/checkJsxChildrenCanBeTupleType.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import React from 'react'
    
    interface ResizablePanelProps {
      children: [React.ReactNode, React.ReactNode]
    }
    
    class ResizablePanel extends React.Component<
      ResizablePanelProps, any> {}
    
    const test = <ResizablePanel>
      <div />
      <div />
    </ResizablePanel>
    
    const testErr = <ResizablePanel>
                     ~~~~~~~~~~~~~~
!!! error TS2322: Type '{ children: [Element, Element, Element]; }' is not assignable to type 'Readonly<ResizablePanelProps>'.
!!! error TS2322:   Types of property 'children' are incompatible.
!!! error TS2322:     Type '[Element, Element, Element]' is not assignable to type '[ReactNode, ReactNode]'.
!!! error TS2322:       Types of property 'length' are incompatible.
!!! error TS2322:         Type '3' is not assignable to type '2'.
      <div />
      <div />
      <div />
    </ResizablePanel>